添加延迟执行和配置文件可作为参数传递

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "uri" : "redis://localhost:6379/",
-  "queues": "900sui:ansyTaskQueue",
+  "queues": "msf:ansyTaskQueue",
   "connections" : 10,
   "concurrency" : 5,
   "namespace"   : "kcResque:",
